--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
                     <li><i class="fas fa-envelope"></i> <a href="mailto:jack.stalley@outlook.com">jack.stalley@outlook.com</a></li>
                     <li><i class="fas fa-phone"></i> 07413 643 715</li>
                     <li><i class="fas fa-map-marker-alt"></i> St Neots, PE19 6BX</li>
-                    <li><i class="fab fa-linkedin"></i> <a href="#">linkedin.com/in/jack-stalley</a></li>
+                    <li><i class="fab fa-linkedin"></i> <a href="#">linkedin.com/in/jack-stalley-136178ba</a></li>
                 </ul>
             </div>
 
